--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 <body>
     <!-- header area start -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
+        <!-- navbar part -->
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/logo/logo.png" alt="Logo not found">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,29 +35,95 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-5">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Disabled</a>
+                            <a class="nav-link" href="#">Deals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Disabled</a>
+                            <a class="nav-link" href="#">Success</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Disabled</a>
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Register</a>
                         </li>
                     </ul>
                     <form class="ms-auto" role="search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success px-4" type="submit">Register</button>
                     </form>
                 </div>
             </div>
         </nav>
+        <!-- Slider part -->
+        <div class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators visually-hidden">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner rounded-3">
+                    <div class="carousel-item active">
+                        <img src="assets/images/cover/cover-1.png" class="d-block w-100" alt="Slide image">
+                        <div class="carousel-caption d-md-block">
+                            <h1 class="fw-bolder">Get Started Digital <br> Learning</h1>
+                            <p class="fs-5 fw-lighter">It is a long established fact that a reader will be distracted by
+                                the
+                                readable <br>
+                                content of a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-success fw-bold px-4 btn-lg">Get Started</button>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/cover/cover-2.jpg" class="d-block w-100" alt="Slide image">
+                        <div class="carousel-caption d-md-block">
+                            <h1 class="fw-bolder">Get Started Digital <br> Learning</h1>
+                            <p class="fs-5 fw-lighter">SIt is a long established fact that a reader will be distracted
+                                by the
+                                readable
+                                <br>brcontent of a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-success fw-bold px-4 btn-lg">Get Started</button>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/cover/cover-3.jpg" class="d-block w-100" alt="Slide image">
+                        <div class="carousel-caption d-md-block">
+                            <h1 class="fw-bolder">Get Started Digital <br> Learning</h1>
+                            <p class="fs-5 fw-lighter">It is a long established fact that a reader will be distracted by
+                                the
+                                readable
+                                <br>brcontent of a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-success fw-bold px-4 btn-lg">Get Started</button>
+
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
     </header>
     <!-- header area end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
