--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </nav>
         <!-- Slider part -->
-        <div class="container">
+        <div class="container pb-5">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators visually-hidden">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -126,6 +126,124 @@
         </div>
     </header>
     <!-- header area end -->
+    <main>
+        <!-- course area start  -->
+        <div class="container py-5">
+            <div class="text-center pb-3">
+                <h1 class="fw-bolder">Discover Our Popular <br>Courses</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page
+                    when looking at
+                    its layout.</p>
+            </div>
+            <div class="row d-flex">
+                <div class="col-lg-6 card mb-3 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="assets/images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                    <small>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</small>
+                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="assets/images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
+                                    <small>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</small>
+                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="assets/images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title fw-bold">Fundamental Of UI/UX Development</h5>
+                                    <small>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</small>
+                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="assets/images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title fw-bold">Digital Marketing</h5>
+                                    <small>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</small>
+                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="assets/images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title fw-bold">Photography Basic Rules</h5>
+                                    <small>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</small>
+                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 col-lg-6 g-0 me-3 col-md-6 col-sm-12" style="max-width: 640px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="assets/images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title fw-bold">Motion Graphics</h5>
+                                    <small>Some quick example text to build on the card title
+                                        and make up the bulk of the card.</small>
+                                    <h6 class="text-primary pt-2">Price: 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center pt-4">
+                <button type="button" class="btn btn-success fw-bold px-5 py-3 btn-lg">See More Courses</button>
+            </div>
+        </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
