--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="carousel-item active">
                         <img src="assets/images/cover/cover-1.png" class="d-block w-100" alt="Slide image">
                         <div class="carousel-caption d-md-block">
-                            <h1 class="fw-bolder">Get Started Digital <br> Learning</h1>
+                            <h1 class="fw-bolder display-2">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 fw-lighter">It is a long established fact that a reader will be distracted by
                                 the
                                 readable <br>
@@ -90,7 +90,7 @@
                     <div class="carousel-item">
                         <img src="assets/images/cover/cover-2.jpg" class="d-block w-100" alt="Slide image">
                         <div class="carousel-caption d-md-block">
-                            <h1 class="fw-bolder">Get Started Digital <br> Learning</h1>
+                            <h1 class="fw-bolder display-2">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 fw-lighter">SIt is a long established fact that a reader will be distracted
                                 by the
                                 readable
@@ -103,7 +103,7 @@
                     <div class="carousel-item">
                         <img src="assets/images/cover/cover-3.jpg" class="d-block w-100" alt="Slide image">
                         <div class="carousel-caption d-md-block">
-                            <h1 class="fw-bolder">Get Started Digital <br> Learning</h1>
+                            <h1 class="fw-bolder display-2">Get Started Digital <br> Learning</h1>
                             <p class="fs-5 fw-lighter">It is a long established fact that a reader will be distracted by
                                 the
                                 readable
@@ -243,6 +243,65 @@
             </div>
             <div class="text-center pt-4">
                 <button type="button" class="btn btn-success fw-bold px-5 py-3 btn-lg">See More Courses</button>
+            </div>
+        </div>
+        <!-- Explore elearning Institute -->
+        <div class="container my-5">
+            <div class="card mb-3 g-0 me-3" style="max-width: 100%;">
+                <div class="row g-0">
+                    <div class="col-md-6">
+                        <img src="assets/images/working.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 d-flex align-items-center">
+                        <div class="card-body">
+                            <div>
+                                <h1 class="card-title fw-bolder display-4">Explore The elearning Institute</h1>
+                                <p class="text-muted fs-5">There are many variations of passages of Lorem Ipsum
+                                    available,
+                                    but the majority have
+                                    suffered alteration in some form,
+                                    by injected humour, or randomised words which don't look even slightly believable.
+                                    If you are going to use a passage of
+                                    Lorem Ipsum, you need to be sure. <br><br>
+
+                                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators
+                                    on the Internet tend to repeat
+                                    predefined.</p>
+                                <div class="d-flex gap-5">
+                                    <div class="">
+                                        <h1 class="fw-bold">3.2K+</h1>
+                                        <p class="text-muted">Onlile Course</p>
+                                    </div>
+                                    <div class="">
+                                        <h1 class="fw-bold">600+</h1>
+                                        <p class="text-muted">Expert Member</p>
+                                    </div>
+                                    <div class="">
+                                        <h1 class="fw-bold">1K+</h1>
+                                        <p class="text-muted">Rating & Review</p>
+                                    </div>
+                                </div>
+                                <button type="button" class="btn btn-success fw-bold px-4 btn-lg">Read More</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Register area start  -->
+        <div class="container py-5">
+            <div class="card mb-3 g-0 me-3" style="max-width: 100%;">
+                <div class="row g-0 p-5 bg-success rounded-3">
+                    <div class="col-lg-8 text-light">
+                        <h1>Ready to join?</h1>
+                        <p>It is a long established fact that a reader will be distracted by the <br>
+                            readable content of a page when looking at its layout.</p>
+                    </div>
+                    <div class="col-lg-4 d-flex align-items-center">
+                        <button type="button" class="btn btn-light text-success fw-bold px-4 btn-lg ms-auto">Register
+                            Now</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
