--- a/index.html
+++ b/index.html
@@ -305,6 +305,30 @@
             </div>
         </div>
     </main>
+    <!-- footer area start -->
+    <footer>
+        <div class="mt-5">
+            <div class="d-flex flex-column justify-content-center align-items-center bg-dark"
+                style="max-width: 100%; height: 450px;">
+                <div class="text-center text-light lh-lg">
+                    <h1 class="fw-bolder">Bohubrihi</h1>
+                    <address>
+                        Office 41, Zawaya Buildin, Ghala Muscat, <br>
+                        Sultanate of Oman <br>
+                        Privacy Ploicy | Terms of use
+                    </address>
+                </div>
+                <div class="icons">
+                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
