Footer icons part some code  edited

--- a/index.html
+++ b/index.html
@@ -319,11 +319,13 @@
                     </address>
                 </div>
                 <div class="icons">
-                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href=""><i
+                            class="fs-2 text-decoration-none text-light px-2 fa-brands fa-square-facebook"></i></a>
+                    <a href=""><i
+                            class="fs-2 text-decoration-none text-light px-2 fa-brands fa-square-instagram"></i></a>
+                    <a href=""><i class="fs-2 text-decoration-none text-light px-2 fa-brands fa-github"></i></a>
+                    <a href=""><i class="fs-2 text-decoration-none text-light px-2 fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fs-2 text-decoration-none text-light px-2 fa-brands fa-square-twitter"></i></a>
                 </div>
             </div>
 
