--- a/index.html
+++ b/index.html
@@ -304,6 +304,20 @@
                 </div>
             </div>
         </div>
+        <!-- sponsor area start  -->
+        <div class="container">
+            <div class="text-center py-5">
+                <h1 class="display-4 fw-bolder pb-4">Trusted by over 800+ companies</h1>
+                <div class="d-flex justify-content-between">
+                    <img src="assets/images/company/company-2.png" class="img-fluid" alt="companie icons">
+                    <img src="assets/images/company/company-1.png" class="img-fluid" alt="companie icons">
+                    <img src="assets/images/company/company-3.png" class="img-fluid" alt="companie icons">
+                    <img src="assets/images/company/company-4.png" class="img-fluid" alt="companie icons">
+                    <img src="assets/images/company/company-5.png" class="img-fluid" alt="companie icons">
+                    <img src="assets/images/company/company-6.png" class="img-fluid" alt="companie icons">
+                </div>
+            </div>
+        </div>
     </main>
     <!-- footer area start -->
     <footer>
@@ -311,7 +325,7 @@
             <div class="d-flex flex-column justify-content-center align-items-center bg-dark"
                 style="max-width: 100%; height: 450px;">
                 <div class="text-center text-light lh-lg">
-                    <h1 class="fw-bolder">Bohubrihi</h1>
+                    <h1 class="fw-bolder">Bohubrihi Pathshala</h1>
                     <address>
                         Office 41, Zawaya Buildin, Ghala Muscat, <br>
                         Sultanate of Oman <br>
