Student feedback part added

--- a/index.html
+++ b/index.html
@@ -304,9 +304,19 @@
                 </div>
             </div>
         </div>
+        <!-- Student feedback part -->
+        <div class="container">
+            <div class="py-5">
+                <div class="text-center pb-4">
+                    <h1 class="display-4 fw-bolder pb-4">Some Students Feedback</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable <br>content of a
+                        page when looking at its layout.</p>
+                </div>
+            </div>
+        </div>
         <!-- Question area start  -->
-        <div class="container py-5">
-            <div class="">
+        <div class="container">
+            <div class=" py-5">
                 <div class="text-center pb-4">
                     <h1 class="display-4 fw-bolder pb-4">Frequently Asked Questions</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable <br>content of a
