--- a/index.html
+++ b/index.html
@@ -381,6 +381,58 @@
                 </div>
             </div>
         </div>
+        <!-- Successful student part start  -->
+        <div class="container">
+            <div class="py-5">
+                <div class="row pb-4">
+                    <div class="col-lg-7 col-md-10 col-12">
+                        <h1 class="display-4 fw-bolder pb-4">Meet Our Successfull Students</h1>
+                        <p class=" text-muted fs-5">It is a long established fact that a reader will be distracted by
+                            the readable content of a
+                            page when looking at its layout.</p>
+
+                    </div>
+                </div>
+                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="assets/images/student/student-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold">Awlad Hossain</h4>
+                                <p class="card-text text-muted fs-5">UIUX Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="assets/images/student/student-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold">Jannatul Islam</h4>
+                                <p class="card-text text-muted fs-5">Motion Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="assets/images/student/student-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold">Imran Hossain</h4>
+                                <p class="card-text text-muted fs-5">Graphic Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="assets/images/student/student-4.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h4 class="card-title fw-bold">Nishi Akter</h4>
+                                <p class="card-text  text-muted fs-5">Web Developer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Student feedback part -->
         <div class="container">
             <div class="py-5">
