Stduent feedback part complitted

--- a/index.html
+++ b/index.html
@@ -431,6 +431,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="d-flex justify-content-center pt-5">
+                    <button type="button" class="btn btn-success fw-bold px-4 btn-lg">View All</button>
+                </div>
             </div>
         </div>
         <!-- Student feedback part -->
@@ -440,6 +443,68 @@
                     <h1 class="display-4 fw-bolder pb-4">Some Students Feedback</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable <br>content of a
                         page when looking at its layout.</p>
+                </div>
+                <div class="container overflow-hidden">
+                    <div class="row row-cols-lg-2 row-cols-md-1 row-cols-sm-1 g-4">
+                        <div class="col">
+                            <div class="p-5 rounded-3 border bg-light">
+                                <div class="d-flex">
+                                    <img src="assets/images/comma.png" class="img-fluid me-auto" alt="">
+                                    <div class="text-warning fs-4">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="text-muted fs-5 my-3">There are many variations of passages of Lorem Ipsum
+                                    available, but the majority have
+                                    suffered alteration in some form,
+                                    by injected humour, or randomised words which don't look even slightly believable.
+                                    If you are going to use a passage of
+                                    Lorem.</p>
+                                <div class="d-flex">
+                                    <img src="assets/images/student/student-5.png" style="width: 58px;" alt="">
+                                    <div class="ps-3">
+                                        <span> <span class="fw-bolder fs-5">Awlad Hossain</span> <br> <span
+                                                class="text-muted fs-5">UI
+                                                Designer</span> </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-5 rounded-3 border bg-light">
+                                <div class="d-flex">
+                                    <img src="assets/images/comma.png" class="img-fluid me-auto" alt="">
+                                    <div class="text-warning fs-4">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="text-muted fs-5 my-3">There are many variations of passages of Lorem Ipsum
+                                    available, but the majority have
+                                    suffered alteration in some form,
+                                    by injected humour, or randomised words which don't look even slightly believable.
+                                    If you are going to use a passage of
+                                    Lorem.</p>
+                                <div class="d-flex">
+                                    <img src="assets/images/student/student-6.png" style="width: 58px;" alt="">
+                                    <div class="ps-3">
+                                        <span> <span class="fw-bolder fs-5">Shanta Akter</span> <br> <span
+                                                class="text-muted fs-5">Graphic Designer</span> </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center pt-5">
+                    <button type="button" class="btn btn-success fw-bold px-4 btn-lg">View All</button>
                 </div>
             </div>
         </div>
